# coder-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  coder_mcp.pyi  justfile  pyproject.toml  test_import.py
python/coder_mcp/: __init__.py  __init__.pyi  types.py  utils.py
python/coder_mcp/runtime/: __init__.py  docker_runtime.py  local_runtime.py  runtime.py  rust_env.py  temp_workspace.py
src/: lib.rs  main.rs  models.rs  server.rs  service.rs
src/runtime/: bash.rs  mod.rs  terminal.rs
src/tools/: file_tools.rs  mod.rs  utils.rs
tests/: test_tool_filter.py
