[package]
name = "coder-mcp"
version = "0.1.0"
edition = "2024"

[lib]
name = "coder_mcp"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full", "process", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
colored = "2.0"
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
rmcp = { version = "0.12.0", features = ["client", "transport-streamable-http-server", "macros", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
glob = "0.3.3"
regex = "1.12.2"
walkdir = "2.5.0"
portable-pty = "0.8"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
pyo3 = { version = "0.27.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }

[dev-dependencies]
tempfile = "3.24.0"
reqwest = "0.12"
